--- a/settings.json
+++ b/settings.json
@@ -23,7 +23,9 @@
 				"name": 0,
 				"owo": 0,
 				"sanitize": 3,
-				"pope": 3
+				"pope": 3,
+				"kick": 3,
+				"ban": 3
 			},
 			"room_max": 8,
 			"owner": null,
