--- a/settings.json
+++ b/settings.json
@@ -7,6 +7,8 @@
 			"runlevel": {
 				"godmode": 0,
 				"youtube": 0,
+				"image": 0,
+				"video": 0,
 				"joke": 0,
 				"fact": 0,
 				"backflip": 0,
