--- a/settings.json
+++ b/settings.json
@@ -50,6 +50,8 @@
 			"runlevel": {
 				"godmode": 0,
 				"youtube": 0,
+				"image": 0,
+				"video": 0,
 				"joke": 0,
 				"fact": 0,
 				"backflip": 0,
@@ -66,7 +68,9 @@
 				"name": 0,
 				"owo": 0,
 				"sanitize": 3,
-				"pope": 3
+				"pope": 3,
+				"kick": 3,
+				"ban": 3
 			},
 			"room_max": 30,
 			"owner": null,
