--- a/settings.json
+++ b/settings.json
@@ -114,6 +114,19 @@
 		"black",
 		"brown",
 		"pink",
+		"yellow",
+                "cyan",
+                "orange",
+                "scarlet",
+                "amber",
+                "chartreuse",
+                "seagreen",
+                "azure",
+                "magenta",
+                "olive",
+                "grey",
+                "gunmetal",
+                "vantablack",
 		"pingu"
 	],
 	"banLength": 1440,
